@@ -1,5 +1,5 @@
 
-Pygame is currently aiming for a 1.0 release near the end of the year.
+Pygame is currently aiming for a 1.0 release first quarter this year (2001).
 This doesn't mean pygame is in a useless state, it is in fact getting
 quite robust.
 
